JuiceShop-K8s-Terraform-NginxController/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juice-shop
spec:
  ingressClassName: nginx
  rules:
    - host: juice-app.devops.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: juice-shop
                port:
                  number: 80
            path: /
